<resources>
    <string name="app_name">AfricaMarket</string>
    <string name="email_text">Email</string>
    <string name="login_text">SE CONNECTER</string>
    <string name="or_text">OR</string>
    <string name="create_new_account_text">CREER UN NOUVEAU COMPTE</string>
    <string name="password_text">Mot de passe</string>
    <string name="password_forgotten_text">Mot de passe oublié?</string>
    <string name="Not_member_text">Pas encore membre?</string>
    <string name="start_like_text">COMMENCER EN TANT QUE :</string>
    <string name="admin_text">ADMINISTRATEUR</string>
    <string name="cleint_text">CLEINT</string>
    <string name="hello_text">EN TANT QUE CHEF DES ADMINISTRATEURS VOUS POUVEZ :</string>
    <string name="add_product_text">Ajouter un produit</string>
    <string name="add_admin_text">Ajouter un administrateur</string>
    <string name="hint_addAdmin_text">Entrer l\'email du nouveau admin</string>
    <string name="send_code_text">Envoyer le code de creation</string>
    <string name="subject">Code pour la création de votre compte administrateur</string>
    <string name="message">Veuillez utiliser le code suivant pour créer votre compte administrateur :</string>
    <string name="username_text">Nom d\'utilisateur</string>
    <string name="code_sent_text">Code de création reçu par mail</string>
</resources>
