<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="35dp"
    tools:context=".activities.CreateNewAdminAccount">

    <EditText
        android:id="@+id/sent_code_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_sent_text"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/name_create_admin_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_text"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/email_create_admin_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_text"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/password_create_admin_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/create_account_create_admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account_text"/>


</LinearLayout>