<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/get_stated_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_like_text"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/admin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_text"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/client_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cleint_text"/>

</LinearLayout>
