<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/hello_admin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_text"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product_text"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/add_admin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_admin_text"/>

</LinearLayout>
